--- a/style.css
+++ b/style.css
@@ -484,6 +484,7 @@ Coltec/2017
       padding-right: 1%; }
 
   .sign {
+    padding: 1%;
     font-size: 1.1em; } }
 /*Destaques da página*/
 .ling {
