--- a/style.scss
+++ b/style.scss
@@ -188,11 +188,11 @@ $fonte3: 'Revalia', cursive;
         #icon{
             padding-right: 1%;
         }
-    }
-
-    .sign{
+        .sign{
+        display: block;
         padding: 1%;
         font-size: 1.1em;
+        }
     }
 }
 
