--- a/style.scss
+++ b/style.scss
@@ -188,10 +188,11 @@ $fonte3: 'Revalia', cursive;
         #icon{
             padding-right: 1%;
         }
-        .sign{
+        .csign{
+            position: relative;
             display: block;
-            padding: 1%;
-            font-size: 0.5em;
+            padding: 2%;
+            font-size: 1.0em;
         }
     }
 }
